// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stakingEvents should filter by account 1`] = `
Object {
  "stakingEvents": Object {
    "__typename": "StakingEventsConnection",
    "nodes": Array [
      Object {
        "__typename": "StakingEvent",
        "amount": "1000000",
        "datetime": "2022-11-08T19:03:19.501",
        "eventId": "Bonded",
        "identityId": "0x43b62e2ea8713eb6f766beed4651f41ad52b607e7c6214bd6cb444952e9c3a6f",
        "nominatedValidators": null,
        "stashAccount": "5D9n9c1fCKa6uLf2aZHHFKk3oSPwuPTGvfnjgRbzptzownBH",
      },
      Object {
        "__typename": "StakingEvent",
        "amount": null,
        "datetime": "2022-11-08T19:03:20",
        "eventId": "Nominated",
        "identityId": "0x43b62e2ea8713eb6f766beed4651f41ad52b607e7c6214bd6cb444952e9c3a6f",
        "nominatedValidators": Array [
          "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
        ],
        "stashAccount": "5D9n9c1fCKa6uLf2aZHHFKk3oSPwuPTGvfnjgRbzptzownBH",
      },
      Object {
        "__typename": "StakingEvent",
        "amount": "100",
        "datetime": "2022-11-08T19:03:26.5",
        "eventId": "Unbonded",
        "identityId": "0x43b62e2ea8713eb6f766beed4651f41ad52b607e7c6214bd6cb444952e9c3a6f",
        "nominatedValidators": null,
        "stashAccount": "5D9n9c1fCKa6uLf2aZHHFKk3oSPwuPTGvfnjgRbzptzownBH",
      },
      Object {
        "__typename": "StakingEvent",
        "amount": null,
        "datetime": "2022-11-08T19:03:27",
        "eventId": "Nominated",
        "identityId": "0x43b62e2ea8713eb6f766beed4651f41ad52b607e7c6214bd6cb444952e9c3a6f",
        "nominatedValidators": Array [
          "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        ],
        "stashAccount": "5D9n9c1fCKa6uLf2aZHHFKk3oSPwuPTGvfnjgRbzptzownBH",
      },
    ],
    "totalCount": 4,
  },
}
`;

exports[`stakingEvents should return nomination events 1`] = `
Object {
  "stakingEvents": Object {
    "__typename": "StakingEventsConnection",
    "nodes": Array [
      Object {
        "__typename": "StakingEvent",
        "amount": null,
        "datetime": "2022-11-08T19:03:20",
        "eventId": "Nominated",
        "identityId": "0x43b62e2ea8713eb6f766beed4651f41ad52b607e7c6214bd6cb444952e9c3a6f",
        "nominatedValidators": Array [
          "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
        ],
        "stashAccount": "5D9n9c1fCKa6uLf2aZHHFKk3oSPwuPTGvfnjgRbzptzownBH",
      },
      Object {
        "__typename": "StakingEvent",
        "amount": null,
        "datetime": "2022-11-08T19:03:27",
        "eventId": "Nominated",
        "identityId": "0x43b62e2ea8713eb6f766beed4651f41ad52b607e7c6214bd6cb444952e9c3a6f",
        "nominatedValidators": Array [
          "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
        ],
        "stashAccount": "5D9n9c1fCKa6uLf2aZHHFKk3oSPwuPTGvfnjgRbzptzownBH",
      },
    ],
    "totalCount": 2,
  },
}
`;
